--- a/index.css
+++ b/index.css
@@ -2,9 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Montserrat', sans-serif;
-    background: linear-gradient(180deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.1) 90%), url('/assets/img/bg-1920.jpg') center center / cover no-repeat;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.1) 90%), url('/public/img/bg-1920.jpg') center center / cover no-repeat;
     background-size:cover;
     background-position: center;
     background-attachment: fixed;
